k8s/overlays/gcp/gateway-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eve-gateway
  namespace: eve
spec:
  template:
    spec:
      containers:
        - name: gateway
          image: public.ecr.aws/w7c4v0w3/eve-horizon/gateway:latest
          imagePullPolicy: IfNotPresent
