k8s/overlays/gcp/supabase-auth-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supabase-auth
  namespace: eve
spec:
  template:
    spec:
      containers:
        - name: gotrue
